<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/purple"
    >

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:background="#664EA6"
        android:fontFamily="@font/abril_fatface"
        android:text="           Bill Calculator           "
        android:textColor="#E6D8F1"
        android:textSize="38sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/amt"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextAmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:fontFamily="@font/raleway"
        android:hint="Enter amount"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="#9E95A6"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/p"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:fontFamily="@font/raleway"
        android:hint="Enter no. of pax"
        android:inputType="number"
        android:textColorHint="#7A6986" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggleButtonSvsEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#6750A3"
            android:checked="true"
            android:fontFamily="@font/raleway"
            android:text="@string/nsvs"
            android:textColor="@color/black"
            android:textOff="@string/nsvs"
            android:textOn="@string/svs"
            android:textSize="20sp" />

        <ToggleButton
            android:id="@+id/toggleButtonGstEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#6750A3"
            android:checked="true"
            android:fontFamily="@font/raleway"
            android:text="@string/gst"
            android:textColor="@color/black"
            android:textOff="@string/ngst"
            android:textOn="@string/gst"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewDsc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/dsc"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextDscDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:fontFamily="@font/raleway"
        android:hint="Enter discount percentage"
        android:inputType="number"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0">

            <RadioButton
                android:id="@+id/radioButtonCash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:text="@string/c"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButtonPaynow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:text="@string/pn"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSplit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/raleway"
            android:text="@string/s"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/raleway"
            android:text="@string/r"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="@font/abril_fatface"
        android:text="Total Bill: "
        android:textColor="#311E53"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewBillDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="@font/raleway"
        android:text="@string/space"
        android:textColor="#311E53"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="@font/abril_fatface"
        android:text="Each Pays: "
        android:textColor="#311E53"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewPayDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="@font/raleway"
        android:text="@string/space"
        android:textColor="#311E53"
        android:textSize="24sp" />

</LinearLayout>